[package]
name = "iot-plugin-sdk-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — Rust SDK for writing WASM Component Model plugins."

[lints]
workspace = true

[dependencies]
# Keep the SDK deps minimal: this crate compiles as a dependency of a
# wasm32-wasip2 cdylib plugin. Anything pulling tonic / socket2 / reqwest
# breaks the plugin build.
iot-core = { path = "../iot-core" }
serde.workspace = true
thiserror.workspace = true
# wit-bindgen emits the guest-side bindings (Guest trait, host-import
# free fns) at compile time from the shared WIT world. See ADR-0012.
wit-bindgen = "0.36"

[package.metadata.docs.rs]
# WASM plugins compile for wasm32-wasip2; docs can render on the host target.
all-features = true
