[package]
name = "iot-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IoT-AtHome — Protobuf types, gRPC service stubs, and bus subject builders."
build = "build.rs"

[lints]
workspace = true

[dependencies]
# Generated code uses prost for message types and tonic for gRPC services.
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

# Non-generated helpers.
serde.workspace = true
thiserror.workspace = true

[build-dependencies]
# protox parses .proto files in pure Rust. No protoc binary needed on any
# platform — critical for Windows / Nix / reproducible builds.
protox.workspace = true
tonic-build.workspace = true

[dev-dependencies]
rstest.workspace = true
