[package]
name = "iot-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — Protobuf types, gRPC service stubs, and bus subject builders."
build = "build.rs"

[lints]
workspace = true

[dependencies]
# M3 W1 split: iot-proto-core owns prost messages + subject/header
# helpers and targets wasm32-wasip2. This crate adds only the tonic
# gRPC client/server generation on top.
iot-proto-core = { path = "../iot-proto-core" }
# Re-export targets need prost types visible to downstream callers.
prost.workspace = true
prost-types.workspace = true
# gRPC client + server codegen lives only in this crate.
tonic.workspace = true

[build-dependencies]
# protox parses .proto files in pure Rust. No protoc binary needed on any
# platform — critical for Windows / Nix / reproducible builds.
protox.workspace = true
tonic-build.workspace = true

[dev-dependencies]
rstest.workspace = true
