[package]
name = "iot-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IoT-AtHome — device registry service (canonical device state, gRPC + bus-backed)."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "iot-registry"
path = "src/main.rs"

[dependencies]
iot-core = { path = "../iot-core" }
iot-proto = { path = "../iot-proto" }
iot-bus = { path = "../iot-bus" }
iot-audit = { path = "../iot-audit" }
iot-config = { path = "../iot-config" }
iot-observability = { path = "../iot-observability" }

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
ulid.workspace = true
