[package]
name = "iot-voice-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — host-side voice daemon. Wires iot-voice's pipeline to NATS (M5b W3)."

[lints]
workspace = true

[[bin]]
name = "iot-voice"
path = "src/main.rs"

[dependencies]
# Library half: pure pipeline + traits + stub impls.
iot-voice = { path = "../iot-voice" }
# Bus half: connect + publish JSON intent payloads on
# `command.intent.<domain>.<verb>`. Kept out of the library so
# `iot-voice` stays bus-agnostic + unit-testable per ADR-0015.
iot-bus = { path = "../iot-bus" }
iot-observability = { path = "../iot-observability" }

anyhow.workspace = true
async-nats.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
