[package]
name = "iot-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — local voice pipeline (wake → STT → intent → bus). M5b W2 scaffold."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
# Real microphone capture via `cpal` — pure-Rust on Win/Lin/macOS
# (uses wasapi / alsa / coreaudio respectively, all system libs).
# No CMake bootstrap, unlike whisper-rs / piper. Behind a feature
# so default builds + tests stay platform-agnostic + dep-light.
# Enable with `cargo build -p iot-voice --features cpal` or the
# `iot-voice-daemon` crate's matching `mic` feature.
cpal = ["dep:cpal"]
# Real speech-to-text via `whisper-rs` (wraps whisper.cpp).
# Build prereqs: CMake + Clang on PATH. On Windows:
# `choco install cmake llvm`; macOS / Linux usually have them
# already. First build is slow (~3 minutes on a Pi 5; the
# whisper.cpp C++ source compiles each time the rebuild dirties).
# Cargo's incremental build means subsequent compiles are fast.
# Behind a feature so default builds + ci-local stay CMake-free.
whisper = ["dep:whisper-rs"]
# Phrase-specific wake-word detection via `rustpotter` —
# pure-Rust, MIT, no native deps. Operator supplies an `.rpw`
# wake-word model file (trained from a few audio samples via
# rustpotter's CLI). Drop-in `WakeDetector` impl alongside the
# always-on `EnergyVadWakeDetector`. Default builds skip the
# extra dep.
wake-phrase = ["dep:rustpotter"]

[dependencies]
# Pipeline outputs ride the existing NATS bus; the binary path
# (iot-voice daemon, separate commit) wires `IntentSink` through
# iot-bus. The library itself stays bus-agnostic so unit tests
# don't spin up a broker — `StubIntentSink` collects intents
# in-memory.
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Closed-domain phrase grammar tokenises words; `unicode-segmentation`
# would be the real choice if/when we accept i18n input. Holding off
# until M5b W3 — v1 grammar is ASCII-only ("turn on the kitchen
# light") so a `str::split_whitespace`-based matcher suffices.
tokio = { workspace = true, features = ["sync", "macros", "time"] }
tracing.workspace = true
chrono = { workspace = true, features = ["serde"] }
# Optional. See `[features].cpal` above. Pulled in only when the
# `cpal` feature is on, so default workspace `cargo build` stays
# pure-Rust + drag-free for the rule-engine/registry/etc. crates.
cpal = { version = "0.15", optional = true }
# Optional. See `[features].whisper` above. Wraps whisper.cpp
# via cmake + bindgen. NOT pulled in on default builds; opt-in
# via `--features whisper` or the daemon's `--features stt-whisper`.
# 0.14 because 0.13.2 + LLVM 22.x clang produces opaque
# `whisper_full_params` (every field setter fails to compile);
# 0.14 ships the bindgen 0.70+ tweaks that work against modern
# clang. Verified locally with cmake 4.3 + clang 22.1.
whisper-rs = { version = "0.16", default-features = false, optional = true }
# Optional. See `[features].wake-phrase` above. Pure-Rust
# wake-word detection. 3.x is the current line; the API takes
# i16 samples (we convert from f32 in the adapter).
rustpotter = { version = "3", default-features = false, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
