[package]
name = "sdr433-adapter"
version = "0.1.0"
edition = "2021"
description = "IoT-AtHome — WASM plugin that bridges rtl_433 MQTT events into canonical EntityState bus messages."
publish = false

[lib]
crate-type = ["cdylib"]

# Built from this dir, target pinned in .cargo/config.toml to wasm32-wasip2.
# Not a workspace member — see root Cargo.toml `exclude` list.

[dependencies]
iot-plugin-sdk-rust = { path = "../../crates/iot-plugin-sdk-rust" }
# M3 W1: iot-proto-core is the wasip2-friendly subset (prost messages +
# subject/header helpers, no tonic/hyper).
iot-proto-core = { path = "../../crates/iot-proto-core" }

# google.protobuf.Value/Timestamp construction.
prost = { version = "0.13", default-features = false, features = ["derive"] }
prost-types = { version = "0.13", default-features = false, features = ["std"] }

# JSON parsing for incoming MQTT envelopes.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "iot:sdr433-adapter"
