[package]
name = "zigbee2mqtt-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — adapter that bridges zigbee2mqtt MQTT traffic into canonical devices."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "zigbee2mqtt-adapter"
path = "src/main.rs"

[dependencies]
iot-core = { path = "../../crates/iot-core" }
iot-proto = { path = "../../crates/iot-proto" }
iot-bus = { path = "../../crates/iot-bus" }
iot-config = { path = "../../crates/iot-config" }
iot-observability = { path = "../../crates/iot-observability" }

anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
rumqttc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "fs"] }
tonic.workspace = true
tracing.workspace = true
