[package]
name = "zigbee2mqtt-adapter"
version = "0.1.0"
edition = "2021"
description = "IoT-AtHome — WASM plugin that bridges zigbee2mqtt MQTT traffic into canonical EntityState bus messages."
publish = false

[lib]
crate-type = ["cdylib"]

# Built from this dir, target pinned in .cargo/config.toml to wasm32-wasip2.
# Not a workspace member — see root Cargo.toml `exclude` list.

[dependencies]
iot-plugin-sdk-rust = { path = "../../crates/iot-plugin-sdk-rust" }

# Minimal protobuf encode of `iot.device.v1.EntityState` — the iot-proto
# crate can't build for wasm32-wasip2 (pulls tonic → hyper → native socket
# APIs), so the plugin defines the wire-compatible subset inline. Field
# tags match `schemas/iot/device/v1/entity_event.proto` exactly.
prost = { version = "0.13", default-features = false, features = ["derive"] }
prost-types = { version = "0.13", default-features = false, features = ["std"] }

# JSON parsing for incoming MQTT payloads.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "iot:zigbee2mqtt-adapter"
