[package]
name = "zigbee2mqtt-adapter"
version = "0.1.0"
edition = "2021"
description = "IoT-AtHome — WASM plugin that bridges zigbee2mqtt MQTT traffic into canonical EntityState bus messages."
publish = false

[lib]
crate-type = ["cdylib"]

# Built from this dir, target pinned in .cargo/config.toml to wasm32-wasip2.
# Not a workspace member — see root Cargo.toml `exclude` list.

[dependencies]
iot-plugin-sdk-rust = { path = "../../crates/iot-plugin-sdk-rust" }
# M3 W1: iot-proto split out a wasip2-friendly core (prost messages +
# subject/header helpers, no tonic). The plugin can now consume the
# real `EntityState`/`Ulid` definitions instead of redeclaring them.
iot-proto-core = { path = "../../crates/iot-proto-core" }

# Still need prost-types for google.protobuf.{Value,Timestamp} — those
# are re-exported from iot-proto-core but the plugin constructs them
# directly, so pull the types crate directly too.
prost = { version = "0.13", default-features = false, features = ["derive"] }
prost-types = { version = "0.13", default-features = false, features = ["std"] }

# JSON parsing for incoming MQTT payloads.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "iot:zigbee2mqtt-adapter"
